--- a/package.json
+++ b/package.json
@@ -9,18 +9,59 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/next-js": "^2.4.2",
+    "@chakra-ui/react": "^3.0.0",
+    "@coong/sdk": "^0.0.23",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@polkadot/extension-dapp": "^0.55.1",
+    "@polkadot/extension-inject": "^0.51.1",
+    "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-dropdown-menu": "^2.1.2",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-menubar": "^1.1.2",
+    "@radix-ui/react-radio-group": "^1.2.1",
+    "@radix-ui/react-separator": "^1.1.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-switch": "^1.1.1",
+    "@radix-ui/react-toast": "^1.2.2",
+    "@radix-ui/react-toggle": "^1.1.0",
+    "@substrate/connect": "^2.0.0",
+    "@substrate/connect-discovery": "^0.2.0",
+    "@substrate/connect-known-chains": "^1.6.0",
+    "@substrate/light-client-extension-helpers": "^2.5.1",
+    "@substrate/smoldot-discovery": "^2.0.0",
+    "@web3-onboard/core": "^2.23.0",
+    "@web3-onboard/injected-wallets": "^2.11.2",
+    "@web3-onboard/react": "^2.10.0",
+    "@web3-onboard/transaction-preview": "^2.1.2",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "dedot": "^0.5.0",
+    "framer-motion": "^11.11.9",
+    "lucide-react": "^0.453.0",
+    "next": "15.0.1",
+    "next-themes": "^0.3.0",
     "react": "19.0.0-rc-69d4b800-20241021",
     "react-dom": "19.0.0-rc-69d4b800-20241021",
-    "next": "15.0.1"
+    "react-icons": "^5.3.0",
+    "react-use": "^17.5.1",
+    "smoldot": "^2.0.30",
+    "swr": "^2.2.5",
+    "tailwind-merge": "^2.5.4",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@chakra-ui/cli": "^3.0.0",
+    "@dedot/chaintypes": "^0.32.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "15.0.1",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "15.0.1"
+    "typescript": "^5"
   }
 }
